--- a/angularApp/index.html
+++ b/angularApp/index.html
@@ -9,9 +9,9 @@
     <script src="lib/loading-bar/loading-bar.js"></script>
     <script src="lib/dir-pagination/dirPagination.js"></script>
     <script src="lib/angular-base64/angular-base64.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-cookies.js"></script>
     <script src="app/app.js"></script>
-    <script src="lib/angular-cookies/angular-cookies.min.js"></script>
-  </head>
+    </head>
   <body>  
         <h1><center><a href="#">DA-IICT Resource Center </a></center></h1>
         <div ui-view></div>
