--- a/nodeApi/angulaApp/bookDetails.html
+++ b/nodeApi/angulaApp/bookDetails.html
@@ -2,6 +2,13 @@
   <div class="section no-pad-bot" id="index-banner" ng-controller="bookDetailsclr">
     <div class="container">
       
+       <div class="row left">
+          <a ng-click="back()" id="4-button" class="btn-large waves-effect waves-light light-blue lighten-1"><strong>Back</strong></a>
+        </div>
+
+        <br>
+        <br>
+        
       <div class="row center">
         <div class="row center">
             <h1>{{book.volumeInfo.title}}</h1>
