--- a/nodeApi/angulaApp/requestbook.html
+++ b/nodeApi/angulaApp/requestbook.html
@@ -2,11 +2,11 @@
 <div class="container center" ng-controller="requestbookclr">
 	<br>
         <div class="row left">
-          <a ng-click="back()" id="4-button" class="btn-large waves-effect waves-light light-blue lighten-1"><strong>Back</strong></a>
+          <a ng-click="back()" id="3-button" class="btn-large waves-effect waves-light light-blue lighten-1"><strong>Back</strong></a>
         </div>
 
         <div class="row right">
-          <a ng-click="back()" id="4-button" class="btn-large waves-effect waves-light light-blue lighten-1"><strong>Logout</strong></a>
+          <a ng-click="logout()" id="4-button" class="btn-large waves-effect waves-light light-blue lighten-1"><strong>Logout</strong></a>
         </div>
 
 
@@ -44,7 +44,7 @@
 		</table>
 		</form>
 
-		
+<!-- 		
 <h1><center>Requested book History</center></h1>
      <table class="striped bordered centered">
         <thead class="light-blue lighten-1">
@@ -55,5 +55,6 @@
               <td> {{book1.BookName}} </td>
             </tr>
         </tbody>
-     </table>
+     </table> -->
+</div> 
 </body>
