--- a/nodeApi/angulaApp/Login.html
+++ b/nodeApi/angulaApp/Login.html
@@ -3,7 +3,14 @@
 
  <div class="section no-pad-bot" id="index-banner" ng-controller="loginclr">
     <div class="container">
-      <br><br>
+
+      <div class="row left">
+          <a ng-click="back()" id="12-button" class="btn-large waves-effect waves-light light-blue lighten-1"><strong>Back</strong></a>
+        </div>
+
+      <br>
+      <br>
+      
       <div class="row center">
 
 
