--- a/nodeApi/angulaApp/otherprofile.html
+++ b/nodeApi/angulaApp/otherprofile.html
@@ -17,7 +17,7 @@
       <br>
 
 
-      <table class="striped bordered centered" ng-hide="myValue2">
+      <table class="striped bordered centered" ng-hide="myValue3">
         <thead class="light-blue lighten-1">
             <tr><th>Book Title</th><th>Author</th><th>Publisher</th><th>More Details</th></tr>
         </thead>
@@ -30,6 +30,8 @@
             </tr>
         </tbody>
       </table>
+
+      <center ng-show="myValue3">You cann't see profile of this user</center>
 
 </div>
 </div>
