--- a/angulaApp/bookDetails2.html
+++ b/angulaApp/bookDetails2.html
@@ -1,5 +1,5 @@
 <body>
-  <div class="section no-pad-bot" id="index-banner" ng-controller="bookDetailsclr">
+  <div class="section no-pad-bot" id="index-banner" ng-controller="bookDetails2clr">
     <div class="container">
       
       <div class="row left">
