--- a/angulaApp/home.html
+++ b/angulaApp/home.html
@@ -35,6 +35,9 @@
         
         <center><h4 >{{searchText}}<h4></center>
       
+        <center>
+          <a href="" ng-click="SuggestionClick2()"> {{tempText}}</a>
+        </center>
       </div>
       <br><br>
 
