--- a/angulaApp/profile.html
+++ b/angulaApp/profile.html
@@ -37,7 +37,13 @@
       </nav>
       <br>
       <a ng-click="search()" id="search-button" class="btn-large waves-effect waves-light light-blue lighten-1"><strong>Search</strong></a>
-      <br><br><br>
+      <br><br>
+      <center><h4 >{{searchText}}<h4></center>
+      
+        <center>
+          {{tempText2}}<a href="" ng-click="SuggestionClick3()"> {{tempText}}</a>
+        </center>
+      <br>
       
       <center><h3>Currently Issued Book</h3></center>
       <table class="striped bordered centered">
