--- a/angulaApp/index.html
+++ b/angulaApp/index.html
@@ -27,7 +27,8 @@
     </head>
   <body>  
         <nav class="light-blue lighten-1" role="navigation">
-    <div ng-controller="indexclr" class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo"><img src="images/logo.png" alt="OPAC" height="64px" width="150px"></a>
+    <div ng-controller="indexclr" class="nav-wrapper container">
+    <a id="logo-container" href="#" class="brand-logo"><img src="images/logo.png" alt="OPAC" height="64px" width="150px"></a>
       <!--<ul id="nav-mobile"  class="right hide-on-med-and-down">
         <li><a  ng-click="login()"><strong>LOGIN</strong></a></li>
       </ul>-->
@@ -36,11 +37,7 @@
         <div ui-view></div>
         
         
-    <br><br><br><br><br><br><br><br><br><br><br><br><br> 
-    <footer class="page-footer blue lighten-1">
-      <div class="footer-copyright blue lighten-1 white-text">
-      </div>
-    </footer> 
+  
 
 
   <!--  Scripts-->
