--- a/angulaApp/otherprofile.html
+++ b/angulaApp/otherprofile.html
@@ -1,5 +1,5 @@
 <body>
-<center>UserID:<li>{{otheruserid}}</li></center>
+
 <div class="section no-pad-bot" id="index-banner" ng-controller="otherprofileclr">
     <div class="container center">
     
@@ -13,10 +13,11 @@
 
       <br><br>
       <br><br>
-      <br><br>
+<div><ul class="row left">
+<h5>UserID:</h5><li>{{otheruserid}}</li>
+</ul></div>
+
       <br>
-
-
       <table class="striped bordered centered" ng-hide="myValue3">
         <thead class="light-blue lighten-1">
             <tr><th>Book Title</th><th>Author</th><th>Publisher</th><th>More Details</th></tr>
