--- a/angulaApp/requestbook.html
+++ b/angulaApp/requestbook.html
@@ -1,5 +1,5 @@
 <body>
-<div class="container center" ng-controller="requestbookclr">
+<div class="container" ng-controller="requestbookclr">
 	<br>
         <div class="row left">
           <a ng-click="back()" id="3-button" class="btn-large waves-effect waves-light light-blue lighten-1"><strong>Back</strong></a>
@@ -11,39 +11,42 @@
 
 
 <h1><center>Request book</center></h1>
+<div class="row Vvek" >
 		<form  action="/home/requestbook" method="POST">
+		<center>
 		<table ng-init="isbn = book.volumeInfo.industryIdentifiers[0].identifier;
 						title = book.volumeInfo.title;
-						publisher = book.volumeInfo.publisher">
+						publisher = book.volumeInfo.publisher" class="center">
 			
 			<tr>
-				<td><label>Book Name</label></td>
-				<td><input type="box" ng-model="title" name="BookName"></td>
+				<td><label><h6><b>Book Name</b></h6></label></td>
+				<td><input type="BOX" ng-model="title" name="BookName"></td>
 			</tr>
 
 			<tr>
-				<td><label>ISBN</label></td>	
+				<td><label><h6><b>ISBN</b></h6></label></td>	
 				<td><input type="box" ng-model="isbn" name="ISBN"></td>
 			</tr>
 
 			<tr>
-				<td><label>UniqueId</label></td>
+				<td><label><h6><b>UniqueId</b></h6></label></td>
 				<td><input type="{{userid}}" ng-model="userid" name="UniqueId"></td>
 			</tr>
 	
 			<tr>
-				<td><label> Comment </label></td>
-				<td><input type="box" ng-model="comment" name="comment"></td>
+				<td><label><h6><b>Comment</b></h6></label></td>
+				<td><textarea type="box" ng-model="comment" name="comment"></textarea></td>
 			</tr>
 
 			<tr>
 				<td></td>	
-				<td><button type="submit" class="btn btn-cancell">Request Book</button>
-				<button type="button" class="btn btn-cancell" ng-click="cancell()">Cancell</button> </td>
+				<td><button type="submit" class="btn btn-cancell light-blue lighten-1">Request Book</button>
+				<button type="button" class="btn btn-cancel light-blue lighten-1" ng-click="cancell()">Cancel</button> </td>
 			</tr>
 		</table>
+		</center>
 		</form>
-
+</div>
 <!-- 		
 <h1><center>Requested book History</center></h1>
      <table class="striped bordered centered">
