--- a/angulaApp/otherprofile.html
+++ b/angulaApp/otherprofile.html
@@ -13,9 +13,6 @@
 
       <br><br>
       <br><br>
-<div><ul class="row left">
-<h5>UserID:</h5><li>{{otheruserid}}</li>
-</ul></div>
 
       <br>
       <table class="striped bordered centered" ng-hide="myValue3">
@@ -32,7 +29,7 @@
         </tbody>
       </table>
 
-      <center ng-show="myValue3">You cann't see profile of this user</center>
+      <center ng-show="myValue3"><h4>You cann't see profile of this user</h4></center>
 
 </div>
 </div>
