--- a/angulaApp/search.html
+++ b/angulaApp/search.html
@@ -16,35 +16,13 @@
     <br>
     <br>
     <br>
- <!--    
-    <div class="container" ng-controller="searchclr"> 
-      <div class="row center">
-          <div class="container-full">
-            <nav>
-                <div class="nav-wrapper">
-                <form>
-                    <div class="input-field white black-text">
-                    <input id="search" type="search" ng-model="searchBook" required>
-                    <label for="search"><i class="material-icons blue-text lighten-1">search</i></label>
-                    <i class="material-icons blue-text lighten-1" ng-click="clearText()">close</i>
-                    </div>
-                </form>
-                </div>
-            </nav>
-        </div>
-      
-      <br>
-      <br>   
-      
-        <a ng-click="search()" id="search-button" class="btn-large waves-effect waves-light light-blue lighten-1"><strong>Search Book</strong></a>
-     </div>
-    </div> -->
+
     <br>
 
     <div class="container">
     <div ng-hide="myValue">  
       <br/>
-      <table class="striped bordered centered" >
+      <table class="striped bordered centered shades-text text-white" >
         <thead class="light-blue lighten-1">
             <tr><th>Book Title</th><th>Author</th><th>Publisher</th><th>More Details</th></tr>
         </thead>
@@ -61,7 +39,7 @@
       <br/>
       <h6><center><b>We couldn't find the following books in the RC. Were you looking for these?</b></center></h6>
       <br/>
-      <table class="striped bordered centered">
+      <table class="striped bordered centered shades-text text-white">
         <thead class="light-blue lighten-1">
             <tr><th>Book Title</th><th>Author</th><th>Publisher</th><th>More Details</th><th>Request Book</th></tr>
         </thead>
@@ -83,8 +61,6 @@
 <br><br>
 
  
-
-
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
