--- a/angulaApp/search.html
+++ b/angulaApp/search.html
@@ -22,8 +22,8 @@
     <div class="container">
     <div ng-hide="myValue">  
       <br/>
-      <table class="striped bordered centered shades-text text-white" >
-        <thead class="light-blue lighten-1">
+      <table class="striped bordered centered " >
+        <thead class="light-blue lighten-1 shades-text text-white">
             <tr><th>Book Title</th><th>Author</th><th>Publisher</th><th>More Details</th></tr>
         </thead>
         <tbody>
@@ -39,8 +39,8 @@
       <br/>
       <h6><center><b>We couldn't find the following books in the RC. Were you looking for these?</b></center></h6>
       <br/>
-      <table class="striped bordered centered shades-text text-white">
-        <thead class="light-blue lighten-1">
+      <table class="striped bordered centered">
+        <thead class="light-blue lighten-1 shades-text text-white">
             <tr><th>Book Title</th><th>Author</th><th>Publisher</th><th>More Details</th><th>Request Book</th></tr>
         </thead>
         <tbody>
