--- a/angulaApp/otherprofile.html
+++ b/angulaApp/otherprofile.html
@@ -29,7 +29,7 @@
         </tbody>
       </table>
 
-      <center ng-show="myValue3"><h4>You cann't see profile of this user</h4></center>
+      <center ng-show="myValue3"><h4>You can't see profile of this user</h4></center>
 
 </div>
 </div>
