--- a/angulaApp/bookDetails.html
+++ b/angulaApp/bookDetails.html
@@ -24,7 +24,7 @@
             <p>{{book.volumeInfo.publisher}}</p>
             <br>
             <p><b> ISBN </b></p>
-            <p>{{book.volumeInfo.industryIdentifiers[0].identifier}}</p> 
+            <p>{{tempISBN}}</p> 
        </div>
         <div class="row">
             <p><b> Authors </b></p>
