--- a/angulaApp/other.html
+++ b/angulaApp/other.html
@@ -21,7 +21,7 @@
                     onkeydown = "if (event.keyCode == 13)
                         document.getElementById('search-button').click()">
                     <label for="search"><i class="material-icons blue-text lighten-1">search</i></label>
-                    <i class="material-icons blue-text lighten-1">close</i>
+                    <i class="material-icons blue-text lighten-1" ng-click="clear()">close</i>
                     </div>
                 </form>
                 </div>
