--- a/angulaApp/search.html
+++ b/angulaApp/search.html
@@ -44,7 +44,7 @@
             <tr><th>Book Title</th><th>Author</th><th>Publisher</th><th>More Details</th><th>Request Book</th></tr>
         </thead>
         <tbody>
-            <tr ng-repeat="books in requestBooks">
+            <tr ng-repeat="books in requestBooks track by $index">
               <td>{{books.volumeInfo.title}}</td>
               <td><span ng-repeat="author in books.volumeInfo.authors">{{author}}, </span></td>
               <td>{{books.volumeInfo.publisher}}</td>
