--- a/angulaApp/requesthistory.html
+++ b/angulaApp/requesthistory.html
@@ -18,7 +18,7 @@
             <tr><td><center>Book Name</center></td></tr>
         </thead>
         <tbody>
-            <tr ng-repeat = "book1 in reqbooklist | filter: userid" >
+            <tr ng-repeat = "book1 in reqbooklist" >
               <td> {{book1.BookName}} </td>
             </tr>
         </tbody>
