--- a/angulaApp/success.html
+++ b/angulaApp/success.html
@@ -1,5 +1,5 @@
 <body>
-	<div class="container" ng-controller="homeclr">
+	<div class="container" ng-controller="successclr">
 		<div class="row center">
 			<br>
 			<br>
