--- a/angulaApp/profile.html
+++ b/angulaApp/profile.html
@@ -70,7 +70,7 @@
       <center><h3>Currently Issued Book</h3></center>
       <table class="striped bordered centered">
         <thead class="light-blue lighten-1">
-            <tr><td>Title</td><td>Author</td><td>DoI</td><td>DoExR</td><td>Fine</td><td>More Details</td></tr>
+            <tr><td><center>Title</center></td><td><center>Author</center></td><td><center>DoI</center></td><td><center>DoExR</center></td><td><center>Fine</center></td><td><center>More Details</center></td></tr>
         </thead>
         <tbody>
             <tr ng-repeat = "book1 in currentissuedbooklist" >
@@ -90,7 +90,7 @@
       <center><h3>History of Issued Book</h3></center>
       <table class="striped bordered centered">
         <thead class="light-blue lighten-1">
-            <tr><td>Title</td><td>Author</td><td>DoI</td><td>DoExR</td><td>DoR</td><td>More Details</td></tr>
+            <tr><td><center>Title</center></td><td><center>Author</center></td><td><center>DoI</center></td><td><center>DoExR</center></td><td><center>DoR</center></td><td><center>More Details</center></td></tr>
 
         </thead>
         <tbody>
