--- a/angulaApp/admin.html
+++ b/angulaApp/admin.html
@@ -5,7 +5,7 @@
           <a ng-click="back()" id="3-button" class="btn-large waves-effect waves-light light-blue lighten-1"><strong>Back</strong></a>
         </div>
         <div class="row right">
-             <a ng-click="other()" id="2-button" class="btn-large waves-effect waves-light light-blue lighten-1"><strong>See Other's Profile</strong></a>
+             <a ng-click="seereqbook()" id="2-button" class="btn-large waves-effect waves-light light-blue lighten-1"><strong>Requested Book History</strong></a>
                   <a ng-click="logout()" id="3-button" class="btn-large waves-effect waves-light light-blue lighten-1"><strong>LogOut</strong></a>
         </div>
         <br/>
