--- a/angulaApp/index.html
+++ b/angulaApp/index.html
@@ -28,7 +28,7 @@
   <body>  
         <nav class="light-blue lighten-1" role="navigation">
     <div ng-controller="indexclr" class="nav-wrapper container">
-    <a id="logo-container" href="#" class="brand-logo"><img src="images/logo.png" alt="OPAC" height="64px" width="150px"></a>
+    <a id="logo-container" href="#" class="brand-logo"><img src="images/logo2.png" alt="OPAC" height="64px" width="300px"></a>
       <!--<ul id="nav-mobile"  class="right hide-on-med-and-down">
         <li><a  ng-click="login()"><strong>LOGIN</strong></a></li>
       </ul>-->
