--- a/angulaApp/admin.html
+++ b/angulaApp/admin.html
@@ -4,43 +4,28 @@
         <div class="row left">
           <a ng-click="back()" id="3-button" class="btn-large waves-effect waves-light light-blue lighten-1"><strong>Back</strong></a>
         </div>
-        <div class="row right">
-             <a ng-click="seereqbook()" id="2-button" class="btn-large waves-effect waves-light light-blue lighten-1"><strong>Requested Book History</strong></a>
+
                   <a ng-click="logout()" id="3-button" class="btn-large waves-effect waves-light light-blue lighten-1"><strong>LogOut</strong></a>
-        </div>
+        <!-- </div> -->
         <br/>
         <br/>
         <br/>
         <br/>
 
 
-<h3><center>Add book</center></h3>
-<div class="row Vvek" >
-		<center>
-		<table class="center">
-			
-			<tr>
-				<td><label><h6><b>Book ISBN</b></h6></label></td>
-				<td><input type="text" ng-model="ISBN" name="BookName"></td>
-			</tr>
-
-			<tr>
-				<td><label><h6><b>Accession Number</b></h6></label></td>	
-				<td><input type="text" ng-model="accessionNumber" name="ISBN" ></td>
-			</tr>
-
-			<tr>
-				<td><label><h6><b>Place(call number)</b></h6></label></td>
-				<td><input type="text" ng-model="place" name="UniqueId"></td>
-			</tr>
-
-			<tr>
-				<td></td>	
-				<td><button ng-click="addbook()"class="btn btn-cancell light-blue lighten-1">Add Book</button>
-			</tr>
-		</table>
-		</center>
-</div>
+     <h3><center>Requested book History</center></h3>
+    <!--  <center>UserID:<li>{{userid}}</li></center> -->
+      <table class="striped bordered centered">
+        <thead class="light-blue lighten-1">
+            <tr><td><center>Book Name</center></td><td ng-show="isadmin"><center>Requester's ID</center></td></tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat = "book1 in reqbooklist" >
+              <td> {{book1.BookName}} </td>
+              <td ng-show="isadmin"> {{book1.UniqueId}} </td>              
+            </tr>
+        </tbody>
+     </table>
 <!-- 		
 <h1><center>Requested book History</center></h1>
      <table class="striped bordered centered">
