--- a/angulaApp/admin.html
+++ b/angulaApp/admin.html
@@ -4,8 +4,10 @@
         <div class="row left">
           <a ng-click="back()" id="3-button" class="btn-large waves-effect waves-light light-blue lighten-1"><strong>Back</strong></a>
         </div>
+        <div class="row right">
 
                   <a ng-click="logout()" id="3-button" class="btn-large waves-effect waves-light light-blue lighten-1"><strong>LogOut</strong></a>
+        </div>
         <!-- </div> -->
         <br/>
         <br/>
